--- a/css/components/whats-section.css
+++ b/css/components/whats-section.css
@@ -18,13 +18,13 @@
 }
 
 .bg-1 {
-    background-color: var(--color-blue);
+    background-color: var(--color-yellow);
     position: relative;
     overflow: hidden;
 }
 
 .bg-2 {
-    background-color: var(--color-green);
+    background-color: var(--spectrum-20);
 }
 
 
