--- a/css/components/grid-container-new.css
+++ b/css/components/grid-container-new.css
@@ -1,13 +1,14 @@
+/* Grid Container - 수정된 버전 */
 .grid-container {
-    position: fixed;
+    position: absolute; /* fixed에서 absolute로 변경 */
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: grid;
     gap: 0;
     pointer-events: auto;
-    z-index: 1;
+    z-index: 5; /* 배경보다 위, 콘텐츠보다 아래 */
     overflow: hidden;
 }
 
